# edge-telemetry-plane

./: .dockerignore  .gitignore  ARCHIVED.md  CHAOS_ENGINEERING_RUNBOOK.md  LICENSE  Makefile  README.md  presentation.html
.github/workflows/: pages.yml
cloud-plane/: Dockerfile  go.mod  go.sum
cloud-plane/cmd/ingress/: main.go
cloud-plane/cmd/processor/: main.go
deploy/: docker-compose.yml
deploy/grafana/dashboards/: detcp_fault_tolerance.json
deploy/grafana/provisioning/dashboards/: default.yaml
deploy/nats/: jetstream.conf
deploy/prometheus/: prometheus.yml
deploy/sql/: init.sql
docs/: architecture.md  github-repository-metadata.md  implementation.md  readme.md
docs/chaos-runbook/: README.md
edge/: Cargo.toml  Dockerfile  build.rs
edge/src/: lib.rs
proto/detcp/v1/: telemetry.proto
scripts/: requirements.txt  run_dev_check.py  simulate_robot_fleet.py
