[package]
name = "detcp-edge"
version = "0.1.0"
edition = "2021"
description = "DETCP edge: MQTT gateway and NATS→gRPC sync worker"

[[bin]]
name = "edge-gateway"
path = "src/bin/gateway.rs"

[[bin]]
name = "edge-sync"
path = "src/bin/sync.rs"

[dependencies]
anyhow = "1"
async-nats = "0.38"
bytes = "1"
futures = "0.3"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
prost = "0.13"
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[build-dependencies]
tonic-build = "0.12"
